# Openindex

./: README.md  pyproject.toml  start_all.sh  start_backend.sh  start_frontend.sh
docs/: README.md  VERSION_MANAGEMENT.md
docs/archive/: ALL_FIXES_COMPLETE.md  COMPLETE_STATUS.md  COMPLETION_SUMMARY.md  FINAL_REPAIR_REPORT.md  FINAL_STATUS.md  FIX_DOCUMENT_ISOLATION.md  ISSUES.md  PLAN.md  REMAINING_FIXES.md  REPAIR_SUMMARY.md  SERVER_STATUS.md  front_om.md
md2tree/: __init__.py  config.py  config.toml  llm.py  md2tree.py  summary.py  thinning.py  utils.py  workflow.py
md2tree/core/: __init__.py  config.py  constants.py  context.py  converter.py  tree.py  types.py  workflow.py
md2tree/docs/: API.md  ARCHITECTURE.md  COORDINATE_TRANSFORM.md  DEVELOPMENT.md  MIDDLE_JSON_GUIDE.md
md2tree/examples/: __init__.py  demo.py  example.py
md2tree/llm/: __init__.py  client.py  summary.py  thinning.py
md2tree/openindex/: __init__.py  app.py  backup.py  database.py  document_store.py  import_existing.py  migrate_to_sqlite.py  migrations.py  models.py  parser_service.py  query_service.py  utils.py
md2tree/parsers/: __init__.py  base.py  middle_json.py  mineru.py
md2tree/pdf/: __init__.py  coordinates.py  viewer.py
md2tree/results/: demo_node_view.html  demo_output.json  demo_page_preview.html  demo_search_results.html  search_arithmetic_intensity.html  search_efficient_training.html  search_memory_wall.html  search_transformer.html  test2_structure.json  test_middle_json.json  test_with_locations.json
md2tree/tests/: README.md  REMAINING_ISSUES.md  conftest.py  (+16 more)
(+62 files in other folders)
